[lworld] Disabling scalarization fails with assert "incorrect depth prediction"

XMLWordPrintable

      Running with -XX:-ScalarizeValueTypes fails:

      # Internal Error (open/src/hotspot/share/opto/parse1.cpp:1615), pid=12623, tid=12638
      # assert(!have_se || stopped() || failing() || (sp() - pre_bc_sp) == depth) failed: incorrect depth prediction: sp=0, pre_bc_sp=2, depth=-1

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: