8242443: [lworld] Disabling scalarization fails with assert "incorrect depth prediction"